--- a/index.html
+++ b/index.html
@@ -14,27 +14,84 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- My Style -->
-    <link rel="stylesheet" href="style.css">
+
+    <!-- Alpine.js -->
+    <link rel="stylesheet" href="style.css"><script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+    <!-- App -->
+    <script src="app.js" async></script>
 </head>
 <body>
 
     <!-- Navbar start -->
-    <nav class="navbar">
+    <nav class="navbar" x-data>
         <a href="#" class="navbar-logo">Pem<span>ikir</span>.</a>
 
         <div class="navbar-nav">
             <a href="#home">Home</a>
             <a href="#about">Tentang Kami</a>
             <a href="#menu">Menu</a>
+            <a href="#products">Products</a>
             <a href="#contact">Kontak</a>
         </div>
 
         <div class="navbar-extra">
-            <a href="#" id="search"><i data-feather="search"></i></a>
-            <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+            <a href="#" id="search-button"><i data-feather="search"></i></a>
+            <a href="#" id="shopping-cart-button">
+                <i data-feather="shopping-cart"></i>
+                <span class="quantity-badge" x-show="$store.cart.quantity" x-text="$store.cart.quantity"></span>
+            </a>
             <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
         </div>
 
+        <!-- Search Form start -->
+        <div class="search-form">
+            <input type="search" id="search-box" placeholder="search here...">
+            <label for="search-box"><i data-feather="search"></i></label>
+        </div>
+        <!-- Search Form end -->
+
+        <!-- Shopping Cart start -->
+        <div class="shopping-cart">
+            <template x-for="(item,index) in $store.cart.items" x-keys="index">
+            <div class="cart-item">
+                <img src="`img/products/${item.img}`" alt="item.name">
+                <div class="item-detail">
+                    <h3>Product 1</h3>
+                    <div class="item-price">
+                        <span x-text="rupiah(item.price)"></span> &times;
+                        <button id="remove" @click="$store.cart.remove(item.id)">&minus;</button>
+                        <span x-text="item.quantity"></span>
+                        <button id="add" @click="$store.cart.add(item)">&plus;</button> &equals;
+                        <span x-text="item.total"></span>
+                    </div>
+                </div>
+            </div>
+        </template>
+        <h4 x-show="$store.cart.items.length" style="margin-top:1rem;">Cart is empty</h4>
+        <h4 x-show="$store.cart.items.length">Total : <span x-text="rupiah($store.cart.total)"></span></h4>
+        
+        <div class="form-container">
+            <form action="" id="checkoutForm">
+                <input type="hidden" name="items" x-model="JSON.stringify(store.cart.items)">
+                <h5>Customer Detail</h5>
+                <label for="name">
+                    <span>Name</span>
+                    <input type="text" name="name" id="name">
+                </label>
+                <label for="emaill">
+                    <span>Email</span>
+                    <input type="email" name="email" id="email">
+                </label>
+                <label for="phone">
+                    <span>Phone</span>
+                    <input type="number" name="phone" id="phone" autocomplete="off">
+                </label>
+                <button class="checkout-button disabled" type="submit" id="checkout-button" value="checkout">Checkout</button>
+            </form>
+        </div>
+    </div>
+        <!-- Shopping Cart end -->
     </nav>
     <!-- Navbar end -->
 
@@ -48,7 +105,6 @@
                 dan menikmati secangkir kopi <br>
                 yang hangat.
             </p>
-            <a href="#" class="cta">Beli Sekarang</a>
         </main>
     </section>
     <!-- Hero Section end -->
@@ -95,38 +151,142 @@
         </p>
         <div class="row">
             <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
+                <img src="img/menu/espresso.jpg" alt="Espresso" class="menu-card-img">
                 <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 35K</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/menu/robusta-brazil.jpg" alt="Robusta Brazil" class="menu-card-img">
+                <h3 class="menu-card-title">- Robusta Brazil -</h3>
                 <p class="menu-card-price">IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
+                <img src="img/menu/Americano.jpg" alt="Americano class="menu-card-img">
+                <h3 class="menu-card-title">- Americano -</h3>
+                <p class="menu-card-price">IDR 55K</p>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
+                <img src="img/menu/Colombian.jpg" alt="Colombian Single Origin" class="menu-card-img">
+                <h3 class="menu-card-title">- Colombian Single Origin -</h3>
+                <p class="menu-card-price">IDR 45K</p>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
-            </div>
-            <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
-            </div>
-            <div class="menu-card">
-                <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price">IDR 15K</p>
+                <img src="img/menu/Blend.jpg" alt="Blend" class="menu-card-img">
+                <h3 class="menu-card-title">- Blend -</h3>
+                <p class="menu-card-price">IDR 25K</p>
             </div>
         </div>
     </section>
     <!-- Menu Section end -->
+
+    <!-- Products section start -->
+    <section class="products" id="products" x-data="products">
+        <h2><span>Produk andalan</span> kami</h2>
+        <p>
+            Selamat datang di bagian kelas produk 
+            kami, di mana keahlian dan kecintaan 
+            kami terhadap kopi menciptakan pengalaman 
+            istimewa untuk para penikmat kopi sejati. 
+            Produk andalan kami adalah biji kopi pilihan 
+            yang dipilih dengan cermat dari perkebunan 
+            kopi terbaik di seluruh dunia. Dengan komitmen 
+            kami untuk kualitas dan keberlanjutan, kami 
+            menghadirkan kepada Anda cita rasa kopi yang 
+            unik dan memuaskan.
+        </p>
+        <div class="row">
+            <template x-for="(item,index) in items" x-key="index">
+            <div class="product-card">
+                <div class="product-icons">
+                    <a href="#" @click.prevent="$store.cart.add(item)">
+                        <svg
+                        width="24"
+                        height="24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round">
+  <use href="img/feather-sprite.svg#shopping-cart" />
+</svg>
+                    </a>
+                    <a href="#" class="item-detail-button">
+                        <svg
+                        width="24"
+                        height="24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round">
+  <use href="img/feather-sprite.svg#eye" />
+</svg>
+                    </a>
+                </div>
+                <div class="product-image">
+                    <img :src="`img/products/${item.img}`" :alt="item.name">
+                </div>
+                <div class="product-content">
+                    <h3 x-text="item.name"></h3>
+                    <div class="product-stars">
+                        <svg
+                        width="24"
+                        height="24"
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round">
+  <use href="img/feather-sprite.svg#star" />
+</svg>
+<svg
+                        width="24"
+                        height="24"
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round">
+  <use href="img/feather-sprite.svg#star" />
+</svg>        
+<svg
+                        width="24"
+                        height="24"
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round">
+  <use href="img/feather-sprite.svg#star" />
+</svg>        
+<svg
+                        width="24"
+                        height="24"
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round">
+  <use href="img/feather-sprite.svg#star" />
+</svg>        
+<svg
+                        width="24"
+                        height="24"
+                        fill="currentColor"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round">
+  <use href="img/feather-sprite.svg#star" />
+</svg>        
+                    </div>
+                    <div class="product-price"><span x-text="rupiah(item.price)"></span></div>
+                </div>
+            </div>
+        </template>
+        </div>
+    </section>
+    <!-- Products section end -->
 
     <!-- Contact Section start -->
     <section id="contact" class="contact">
@@ -138,7 +298,7 @@
         </p>
 
         <div class="row">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126829.29007905214!2d106.79189199999998!3d-6.595193499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69c5b7ad0f824b%3A0x4c71fd1b0b8ae76d!2sKota%20Bogor%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1706058051359!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126829.29007905214!2d106.79189199999998!3d-6.595193499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69c5b7ad0f824b%3A0x4c71fd1b0b8ae76d!2sKota%20Bogor%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1706058051359!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map">
             </iframe>
             <form action="">
                 <div class="input-group">
@@ -177,6 +337,43 @@
             <p>Created by <a href="">Bryanphilip</a>. | &copy; 2024.</p>
         </div>
     </footer>
+    <!-- Footer end -->
+
+    <!-- Modal box item detail start -->
+    <div class="modal" id="item-detail-modal">
+        <div class="modal-container">
+            <a href="#" class="close-icon"><i data-feather="x"></i></a>
+            <div class="modal-content">
+                <img src="img/products/1.jpg" alt="Product 1">
+                <div class="product-content">
+                    <h3>Product 1</h3>
+                    <p>
+                        Nikmati keindahan cita rasa kopi 
+                        dengan produk andalan kami, Biji 
+                        Kopi Brazil. Ditanam di dataran 
+                        tinggi yang subur dan penuh sinar 
+                        matahari di pedalaman Brazil, biji 
+                        kopi ini menghadirkan karakteristik 
+                        unik yang sulit diungkapkan dengan 
+                        kata-kata. Dipilih dengan cermat oleh 
+                        para ahli kopi kami, setiap biji 
+                        menjanjikan pengalaman kopi yang 
+                        menggoda dan memuaskan.
+                    </p>
+                    <div class="product-stars">
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star"></i>
+                        <i data-feather="star"></i>        
+                    </div>
+                    <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                    <a href="#"><i data-feather="shopping-cart"><span>add to cart</span></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal box item detail end -->
     <!-- Feather Icons -->
     <script>
         feather.replace();
