--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kopi Pemikir</title>
+    <title>Thinkez</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
 
     <!-- Navbar start -->
     <nav class="navbar" x-data>
-        <a href="#" class="navbar-logo">Pem<span>ikir</span>.</a>
+        <a href="#" class="navbar-logo">Thi<span>nkez</span>.</a>
 
         <div class="navbar-nav">
             <a href="#home">Home</a>
