--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Navbar start -->
     <nav class="navbar" x-data>
-        <a href="#" class="navbar-logo">Thi<span>nkez</span>.</a>
+        <a href="#" class="navbar-logo">Kaf<span>eynz</span>.</a>
 
         <div class="navbar-nav">
             <a href="#home">Home</a>
